--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
     "@tsconfig/svelte": "^2.0.1",
+    "sass": "^1.39.0",
     "svelte": "^3.37.0",
     "svelte-check": "^2.1.0",
-    "svelte-preprocess": "^4.7.2",
+    "svelte-preprocess": "^4.9.1",
     "tslib": "^2.2.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.2"
