--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@sveltejs/adapter-vercel": "^1.0.0-next.28",
     "node-sass": "^6.0.1",
     "sass": "^1.39.0"
   }
