add icons and event with stopPropagation

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@sveltejs/adapter-vercel": "^1.0.0-next.28",
     "node-sass": "^6.0.1",
-    "sass": "^1.39.0"
+    "sass": "^1.39.0",
+    "svelte-icons": "^2.1.0"
   }
 }
