--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.0.0",
+    "node-sass": "^6.0.1"
   },
   "type": "module",
   "dependencies": {
     "@sveltejs/adapter-vercel": "^1.0.0-next.28",
-    "node-sass": "^6.0.1",
     "sass": "^1.39.0",
     "svelte-icons": "^2.1.0"
   }
