--- a/package.json
+++ b/package.json
@@ -10,22 +10,20 @@
     "lint": "eslint --ignore-path .gitignore ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "sass": "^1.49.0",
     "svelte": "^3.34.0",
     "svelte-check": "^2.0.0",
+    "svelte-hero-icons": "^4.0.3",
+    "svelte-inline-svg": "^1.0.8",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0",
-    "node-sass": "^6.0.1"
+    "typescript": "^4.0.0"
   },
-  "type": "module",
-  "dependencies": {
-    "@sveltejs/adapter-vercel": "^1.0.0-next.28",
-    "sass": "^1.39.0",
-    "svelte-icons": "^2.1.0"
-  }
+  "type": "module"
 }
